--- a/PickRandomCardsWPF/MainWindow.xaml
+++ b/PickRandomCardsWPF/MainWindow.xaml
@@ -1,24 +1,20 @@
-﻿<Window x:Name="Card_Picker" x:Class="PickRandomCardsWPF.MainWindow"
+<Window x:Class="PickRandomCardsWPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PickRandomCardsWPF"
-        mc:Ignorable="d"
-        Title="Card Picker" Height="450" Width="800">
-    <Grid>
+        Title="Random Card Picker" Height="300" Width="400">
+    <Grid Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
-        <ListBox x:Name="listOfCards" HorizontalAlignment="Left" Height="399" Margin="565,10,0,0" VerticalAlignment="Top" Width="217"/>
-
-        <Button Content="Pick Some Cards" HorizontalAlignment="Left" Margin="185,225,0,0" VerticalAlignment="Top" Width="137" Height="24" FontWeight="Bold" Click="Button_Click">
-            <Button.Background>
-                <SolidColorBrush Color="#FFDDDDDD"/>
-            </Button.Background>
-        </Button>
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Margin="120,98,390,260" >
-            <Label Content="How many cards should I pick?" FontSize="20" />
-            <Slider x:Name="numberOfCards" Minimum="1" Maximum="20" Foreground="Black" IsSnapToTickEnabled="True" TickPlacement="TopLeft" IsDirectionReversed="True" AutoToolTipPlacement="TopLeft" />
+        <StackPanel Orientation="Horizontal" Grid.Row="0" Margin="0,0,0,10">
+            <TextBlock Text="Number of Cards:" VerticalAlignment="Center" Margin="0,0,10,0"/>
+            <TextBox Name="CardCountTextBox" Width="50"/>
+            <Button Content="Pick Cards" Margin="10,0,0,0" Click="PickCards_Click"/>
         </StackPanel>
 
+        <ListBox Name="CardsListBox" Grid.Row="2"/>
     </Grid>
 </Window>
